--- a/static/index.html
+++ b/static/index.html
@@ -17,6 +17,9 @@
         <input type="text" id="y" placeholder="y">
         <input type="submit" value="Make move">
     </form>
+    <div id="gameId">
+
+    </div>
 
     <script
       src="https://code.jquery.com/jquery-3.1.1.min.js"
@@ -30,7 +33,8 @@
             console.log(data);
         });
         socket.on('room created', function(data) {
-            console.log(data.roomId);
+            socket.emit('join room', {room: data.roomId});
+            $('#gameId').html('Current room: ' + data.roomId);
         });
 
         $('form#createRoom').submit(function(event) {
