--- a/static/index.html
+++ b/static/index.html
@@ -17,8 +17,11 @@
         <input type="text" id="y" placeholder="y">
         <input type="submit" value="Make move">
     </form>
-    <div id="gameId">
-
+    <div id="gameId" style="color: red">
+        Current room:
+    </div>
+    <div id="status" style="color: green">
+        Create or join room
     </div>
 
     <script
@@ -28,27 +31,55 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
     <script type="text/javascript" charset="utf-8">
         socket = io.connect('http://localhost:5000/gomoku');
+        currentRoom = '';
+        userId = '';
 
+        <!-- event handlers -->
         socket.on('reply', function(data) {
             console.log(data);
         });
+        socket.on('connect', function() {
+            userId = socket.io.engine.id;
+        });
         socket.on('room created', function(data) {
-            socket.emit('join room', {room: data.roomId});
-            $('#gameId').html('Current room: ' + data.roomId);
+            currentRoom = data.roomId;
+            socket.emit('join room', {room: currentRoom});
+            updateRoomInfo();
+        });
+        socket.on('game updated', function(data) {
+            if (data.state == 'GameState.NOT_READY') {
+                updateStatus('Waiting for other player to join');
+            } else if (data.state == 'GameState.FINISHED') {
+                updateStatus('Game finished');
+            } else if (data.currentPlayer == userId) {
+                updateStatus('Your turn!');
+            } else {
+                updateStatus('Other player turn!');
+            }
         });
 
+        <!-- form handlers -->
         $('form#createRoom').submit(function(event) {
             socket.emit('create room');
             return false;
         });
         $('form#joinRoom').submit(function(event) {
-            socket.emit('join room', {room: $('#roomId').val()});
+            currentRoom = $('#roomId').val();
+            socket.emit('join room', {room: currentRoom});
+            updateRoomInfo();
             return false;
         });
         $('form#makeMove').submit(function(event) {
-            socket.emit('make move', {room: $('#roomId').val(), x: $('#x').val(), y: $('#y').val()});
+            socket.emit('make move', {room: currentRoom, x: $('#x').val(), y: $('#y').val()});
             return false;
         });
+
+        function updateRoomInfo() {
+            $('#gameId').html('Current room: ' + currentRoom);
+        }
+        function updateStatus(status) {
+            $('#status').html(status);
+        }
     </script>
 </body>
 </html>
