--- a/static/index.html
+++ b/static/index.html
@@ -5,81 +5,99 @@
     <title>Test</title>
 </head>
 <body>
-    <form id="createRoom" method="POST" action='#'>
-        <input type="submit" value="Create room">
-    </form>
-    <form id="joinRoom" method="POST" action='#'>
-        <input type="text" id="roomId" placeholder="Room ID">
-        <input type="submit" value="Join room">
-    </form>
-    <form id="makeMove" method="POST" action='#'>
-        <input type="text" id="x" placeholder="x">
-        <input type="text" id="y" placeholder="y">
-        <input type="submit" value="Make move">
-    </form>
-    <div id="gameId" style="color: red">
-        Current room:
-    </div>
-    <div id="status" style="color: green">
-        Create or join room
-    </div>
+<form id="createRoom" method="POST" action='#'>
+    <input type="submit" value="Create room">
+</form>
+<form id="joinRoom" method="POST" action='#'>
+    <input type="text" id="roomId" placeholder="Room ID">
+    <input type="submit" value="Join room">
+</form>
+<form id="makeMove" method="POST" action='#'>
+    <input type="text" id="x" placeholder="x">
+    <input type="text" id="y" placeholder="y">
+    <input type="submit" value="Make move">
+</form>
+<div id="gameId" style="color: red">
+    Current room:
+</div>
+<div id="status" style="color: green">
+    Create or join room
+</div>
+<div id="board" style="font-size:200%">
+</div>
 
-    <script
-      src="https://code.jquery.com/jquery-3.1.1.min.js"
-      integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-      crossorigin="anonymous"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
-    <script type="text/javascript" charset="utf-8">
-        socket = io.connect('http://localhost:5000/gomoku');
-        currentRoom = '';
-        userId = '';
+<script src="https://code.jquery.com/jquery-3.1.1.min.js"
+        integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+        crossorigin="anonymous"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+<script type="text/javascript" charset="utf-8">
+    socket = io.connect('http://localhost:5000/gomoku');
+    currentRoom = '';
+    userId = '';
 
-        <!-- event handlers -->
-        socket.on('reply', function(data) {
-            console.log(data);
-        });
-        socket.on('connect', function() {
-            userId = socket.io.engine.id;
-        });
-        socket.on('room created', function(data) {
-            currentRoom = data.roomId;
-            socket.emit('join room', {room: currentRoom});
-            updateRoomInfo();
-        });
-        socket.on('game updated', function(data) {
-            if (data.state == 'GameState.NOT_READY') {
-                updateStatus('Waiting for other player to join');
-            } else if (data.state == 'GameState.FINISHED') {
-                updateStatus('Game finished');
-            } else if (data.currentPlayer == userId) {
-                updateStatus('Your turn!');
+    <!-- event handlers -->
+    socket.on('connect', function() {
+        userId = socket.io.engine.id;
+    });
+    socket.on('room created', function(data) {
+        currentRoom = data.roomId;
+        socket.emit('join room', {room: currentRoom});
+        updateRoomInfo();
+    });
+    socket.on('game updated', function(data) {
+        if (data.state == 'GameState.NOT_READY') {
+            updateStatus('Waiting for other player to join');
+        } else if (data.state == 'GameState.FINISHED') {
+            if (data.currentPlayer == userId) {
+                updateStatus('You won!');
             } else {
-                updateStatus('Other player turn!');
+                updateStatus('You lost!');
             }
-        });
-
-        <!-- form handlers -->
-        $('form#createRoom').submit(function(event) {
-            socket.emit('create room');
-            return false;
-        });
-        $('form#joinRoom').submit(function(event) {
-            currentRoom = $('#roomId').val();
-            socket.emit('join room', {room: currentRoom});
-            updateRoomInfo();
-            return false;
-        });
-        $('form#makeMove').submit(function(event) {
-            socket.emit('make move', {room: currentRoom, x: $('#x').val(), y: $('#y').val()});
-            return false;
-        });
-
-        function updateRoomInfo() {
-            $('#gameId').html('Current room: ' + currentRoom);
+        } else if (data.currentPlayer == userId) {
+            updateStatus('Your turn!');
+        } else {
+            updateStatus('Other player turn!');
         }
-        function updateStatus(status) {
-            $('#status').html(status);
+        updateBoard(data.board);
+    });
+
+    <!-- form handlers -->
+    $('form#createRoom').submit(function(event) {
+        socket.emit('create room');
+        return false;
+    });
+    $('form#joinRoom').submit(function(event) {
+        currentRoom = $('#roomId').val();
+        socket.emit('join room', {room: currentRoom});
+        updateRoomInfo();
+        return false;
+    });
+    $('form#makeMove').submit(function(event) {
+        socket.emit('make move', {room: currentRoom, x: $('#x').val(), y: $('#y').val()});
+        return false;
+    });
+
+    <!-- helper functions -->
+    function updateRoomInfo() {
+        $('#gameId').html('Current room: ' + currentRoom);
+    }
+    function updateStatus(status) {
+        $('#status').html(status);
+    }
+    function updateBoard(board) {
+        $('#board').html(formatBoard(board));
+    }
+    function formatBoard(board) {
+        formatted = '';
+        for(var i = 0; i < 15; i++) {
+            for(var z = 0; z < 15; z++) {
+                formatted += (board[z][i]);
+            }
+            formatted += '<br>';
         }
-    </script>
+        return formatted;
+    }
+
+</script>
 </body>
 </html>
