--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Test</title>
+    <title>Gomoku!</title>
 </head>
 <body>
 <form id="createRoom" method="POST" action='#'>
