--- a/static/index.html
+++ b/static/index.html
@@ -3,26 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Gomoku!</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/style.css">
+    <link rel="icon" type="image/png" href="/static/img/x.png"/>
 </head>
 <body>
-<form id="createRoom" method="POST" action='#'>
-    <input type="submit" value="Create room">
-</form>
-<form id="joinRoom" method="POST" action='#'>
-    <input type="text" id="roomId" placeholder="Room ID">
-    <input type="submit" value="Join room">
-</form>
-<form id="makeMove" method="POST" action='#'>
-    <input type="text" id="x" placeholder="x">
-    <input type="text" id="y" placeholder="y">
-    <input type="submit" value="Make move">
-</form>
-<div id="gameId" class="roomId">
-    Current room:
-</div>
-<div id="status" class="status">
-    Create or join room
+<div>
+    <form id="createRoom" method="POST" action='#'>
+        <input type="submit" value="Create room">
+    </form>
+    <form id="joinRoom" method="POST" action='#'>
+        <input type="text" id="roomId" placeholder="Room ID">
+        <input type="submit" value="Join room">
+    </form>
+    <span id="gameId" class="roomId">Current room:</span>
+    <span id="status" class="status">Create or join room</span>
 </div>
 <div id="board" class="board">
 </div>
@@ -31,6 +25,6 @@
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
         crossorigin="anonymous"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
-<script src="js/scripts.js"></script>
+<script src="/static/js/scripts.js"></script>
 </body>
 </html>
