--- a/static/index.html
+++ b/static/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Gomoku!</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/style.css">
-    <link rel="icon" type="image/png" href="/static/img/x.png"/>
+    <link rel="stylesheet" type="text/css" href="static/css/style.css">
+    <link rel="icon" type="image/png" href="static/img/x.png"/>
 </head>
 <body>
 <div>
@@ -24,7 +24,7 @@
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
         crossorigin="anonymous"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
-<script src="/static/js/scripts.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
+<script src="static/js/scripts.js"></script>
 </body>
 </html>
